correct nav items spacing

--- a/src/app/navbar/nav.component.css
+++ b/src/app/navbar/nav.component.css
@@ -44,7 +44,6 @@
   background-image: url("/assets/icon-nav-home.svg");
   width: 20px;
   height: 20px;
-  /* bottom: 50px !important; */
 }
 
 .movieInactive-icon {
@@ -115,14 +114,17 @@
     height: 72px;
     width: auto;
     margin-right: 32px;
+    justify-content: space-between;
+    top: 5px;
   }
 
   #allIcons-div {
+    width: 40% !important;
     flex-direction: row;
     width: 719px;
     height: 72px;
-    margin-left: 30px;
     align-items: center;
+    justify-content: space-between;
   }
 
   .nav-icons {
@@ -139,8 +141,10 @@
   }
 
   #profile {
-    right: 10px;
-  }
+    margin-right: 13px;
+    position:static;
+    align-self: center;
+ }
 }
 
 @media screen and (max-width: 768px) {
@@ -156,7 +160,6 @@
     flex-direction: row;
     width: 719px;
     height: 56px;
-    margin-left: 30px;
     align-items: center;
     position: relative;
   }
